test/classes/delete-free/lifetimes/ref-borrow-escapes.good
ref-borrow-escapes.chpl:13: In function 'badReturnRefIdentityArg':
ref-borrow-escapes.chpl:14: error: Reference to scoped variable cannot be returned
ref-borrow-escapes.chpl:13: note: consider scope of arg
ref-borrow-escapes.chpl:32: In function 'badReturnRefIdentityArg2':
ref-borrow-escapes.chpl:33: error: Reference to scoped variable cannot be returned
ref-borrow-escapes.chpl:32: note: consider scope of arg
ref-borrow-escapes.chpl:45: In function 'bad':
ref-borrow-escapes.chpl:47: error: Reference to scoped variable cannot be returned
ref-borrow-escapes.chpl:46: note: consider scope of b
